# aprsc

./: .gitignore  .travis.yml  Makefile  README.md  README.sources  accept.h  aprsc.conf  cfgfile.c  cfgfile.h  config.c  config.h  crc32.h  dupecheck.h  hmalloc.c  incoming.c  incoming.h  login.c  netlib.h  passcode.h  splay.c  splay.h
.github/workflows/: tests.yml
doc/: BUILDING.md  CONFIGURATION.md  CONTRIBUTING.md  DEBUGGING.md  DESIGN.md  HOME.md  IGATE-HINTS.md  INSTALLING.md  IS2PEERING.md  LICENSE  LICENSE.md  MONITORING.md  MULTIPLE.md  README.md  TIPS.md  TODO  TRANSLATING.md  WINDOWS.md  test-packets  web-footer.html  web-header.html
doc/devel/: test-packets
src/: .gitignore  LICENSE  Makefile  Makefile.in  README.sources  TODO  ac-hdrs.h.in  accept.c  accept.h  acl.c  acl.h  aclocal.m4  apparmor.aprsc  aprsc-logo2.xcf  aprsc-prepare-chroot.sh  aprsc.8.in  aprsc.c  aprsc.conf  aprsc_munin  aprsis2.c  aprsis2.h  aprsis2.proto  aprsis2plain.c  aprsis2plain.h  cJSON.c  cellmalloc.c  cellmalloc.h  cfgfile.c  cfgfile.h  client_heard.c  client_heard.h  clientlist.c  clientlist.h  config.c  config.h  configure  configure.ac  configure.in  counterdata.c  counterdata.h  (+66 more)
src/debian/: .gitignore  aprsc-chroot.service  aprsc.default  aprsc.init  aprsc.service  aprsc@.service  changelog.release  conffiles  control  dirs  docs  files  links  postinst  postrm  preinst  prerm  rules
src/gfx/: aprsc-joulukissa-2013.xcf  aprsc-logo-shadow.xcf  aprsc-logo.xcf  aprsc-logo3.xcf  aprsc-logo4.xcf
src/rpm/: .gitignore  aprsc.init  aprsc.spec.in
src/tools/: .gitignore  coverity-build-submit.sh  eventload.c  floodconnect.c  sleeptest.c  t2acl.pl
src/web/: aprsc-graph.js  aprsc.css  aprsc.js  index.html  strings-en.json  strings-fi.json  strings-zh.json
tests/: Makefile  runproduct.pm  tls-openssl.conf
tests/aggregator/: 10aggr_join.t  20socket-timeouts.t
tests/ca/: cert-selfsigned.sh  openssl.conf
tests/cfg-aprsc/: acl-all.acl  aggregator  basic  is2-basic  qconstr-protocols  sctp-hub  sctp-leaf  ssl.crt  ssl.key  tls1  uplinks
tests/cfg-javap/: basic  uplinks
tests/libperl/: istest.pm  runproduct.pm
tests/libperl/Google/: ProtocolBuffers.pm
tests/libperl/Google/ProtocolBuffers/: CodeGen.pm  Codec.pm  CodecIV32.pm  CodecIV64.pm  Compiler.pm  Constants.pm
tests/libperl/Ham/APRS/: IS.pm  IS2.pm  IS_Fake.pm  IS_Fake_UDP.pm
tests/t/: 00startstop.t  01login.t  02login-reject.t  10dupecheck.t  11misc-drops.t  12quirks-mode.t  13thirdparty.t  20qconstr-clientonly.t  20qconstr-verified.t  21qconstr-unver.t  21qconstr-unver.t.disabled  22path-trace.t  22qconstr-uplink.t  23qconstr-long.t  24qconstr-protocols.t  27digipath-long.t  30filter-cmd.t  30parser-filter.t  31parser-nmea.t  32filter-negative.t  33filter-more.t  33filter-pref-buddy-obj.t  34filter-type-symbol.t  35filter-digi-entry-unproto.t  36filter-area-my-friend.t  37filter-qconstr.t  38filter-verylong.t  40messaging.t  50disc-blobs.t  51load.t  51uplink-reconnect.t  60udp-client.t  61udp-peer.t  62http-client.t  63udp-submit.t  64udp-load.t  65dupeclient.t  66http-status.t  69sctp.t  70live-upgrade.t  (+5 more)
tests/testdata/: status-urls.txt
tools/: Markdown.pl  aprs-is-copy  aprs-is-coresimurx  aprs-is-file-feed  aprs-is-multirx  aprs-is-rx  aprs-is-xmit  aprsis-http-post
